[package]
name = "codecrafters-grep"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>"]
edition = "2024"
rust-version = "1.94"

[lints.rust]
unsafe_code = "deny"
warnings = "deny"

[lints.clippy]
all = "deny"
pedantic = "deny"
nursery = "deny"

[dependencies]
anyhow = "1.0.68"                                # error handling
walkdir = "2.5.0"
